--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,97 +1,288 @@
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
+  --light-grayish-blue: hsl(210, 46%, 95%);
+  --medium-grayish-blue: hsl(212, 23%, 69%);
+  --dark-grayish-blue: hsl(217, 19%, 35%);
+  --dark-desaturated-blue: hsl(214, 17%, 51%);
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  --font-size: 0.8125em;
+  --font-family: "Manrope", sans-serif;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+  --fw-medium: 500;
+  --fw-bold: 700;
+
+  --size-50: 0.25em;
+  --size-100: 0.5em;
+  --size-150: 0.7em;
+  --size-200: 1em;
+  --size-250: 1.3em;
+  --size-300: 1.5em;
+  --size-400: 2em;
+  --size-450: 2.5em;
+  --size-500: 3em;
+  --size-600: 4em;
+  --size-700: 5em;
+  --size-800: 6em;
+  --size-900: 7em;
+  --size-xl: 9em;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+/* Box sizing rules */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
-body {
+/* Remove default margin */
+* {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
+  padding: 0;
+  font: inherit;
+  font-family: var(--font-family);
+}
+
+/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
+ul[role="list"],
+ol[role="list"] {
+  list-style: none;
+}
+
+/* Set core root defaults */
+html:focus-within {
+  scroll-behavior: smooth;
+}
+
+/* Set core body defaults */
+body {
   min-height: 100vh;
+  text-rendering: optimizeSpeed;
+  line-height: 1.5;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+/* A elements that don't have a class get default styles */
+a:not([class]) {
+  text-decoration-skip-ink: auto;
 }
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+/* Make images easier to work with */
+img,
+picture {
+  max-width: 100%;
+  display: block;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
+/* Inherit fonts for inputs and buttons */
+input,
+button,
+textarea,
+select {
+  font: inherit;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+
+/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
+@media (prefers-reduced-motion: reduce) {
+  html:focus-within {
+    scroll-behavior: auto;
+  }
+
+  *,
+  *::before,
+  *::after {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
 }
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #f7df1eaa);
+/* utility classes */
+
+.primary-header {
+  padding: 0;
+  color: var(--dark-grayish-blue);
+  font-weight: 700;
+  width: 100%;
+  max-width: 40ch;
+  font-size: var(--size-200);
 }
+
+@media screen and (min-width: 40em) {
+  .primary-header {
+    max-width: 27ch;
+    font-size: var(--size-250);
+  }
+}
+main {
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--light-grayish-blue);
+}
+header {
+  padding: 0;
+}
+p {
+  font-size: var(--font-size);
+}
+
+/* component styles */
 
 .card {
-  padding: 2em;
+  width: 100%;
+  max-width: min(710px, 90%);
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  border-radius: var(--size-100);
+}
+.image {
+  min-height: 215px;
+  border-top-left-radius: var(--size-100);
+  border-bottom-left-radius: var(--size-100);
+  background-image: url("../images/drawers.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: top;
 }
 
-.read-the-docs {
-  color: #888;
+.info {
+  padding-inline: var(--size-400);
+  padding-top: var(--size-400);
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+.content {
+  padding-block: var(--size-250);
+  color: var(--dark-desaturated-blue);
+}
+
+.content p {
+  max-width: 31.5ch;
+}
+
+@media screen and (min-width: 40em) {
+  .card {
+    flex-direction: row;
+  }
+  .image {
+    flex: 37%;
+    background-position: center left;
+  }
+  .info {
+    padding-inline: var(--size-450);
+    padding-block: var(--size-300);
+    flex: 63%;
+  }
+  .content {
+    padding-block: var(--size-200);
+    color: var(--dark-desaturated-blue);
+  }
+  .content p {
+    max-width: 45ch;
+  }
+}
+
+footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+  padding-bottom: var(--size-250);
+  margin-inline: -2em;
+  padding-inline: 2em;
+}
+
+@media screen and (min-width:40em) {
+  footer {
+    padding-bottom: 0;
+    margin-inline: -2em;
+    padding-inline: 2em;
+  }
+}
+.share {
+  display: flex;
+  gap: var(--size-200);
+}
+.share img {
+  width: 40px;
+  border-radius: 50%;
+}
+p.name {
+  font-weight: var(--fw-bold);
+  color: var(--dark-grayish-blue);
+}
+p.date {
+  color: var(--dark-desaturated-blue);
+}
+
+.share-icon {
+  position: relative;
   cursor: pointer;
-  transition: border-color 0.25s;
+  background-color: var(--light-grayish-blue);
+  padding: 8px 7px;
+  border-radius: 50%;
 }
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.social {
+  display: none;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+.social {
+  display: none;
+  position: absolute;
+  width: 230px;
+  bottom: -30%;
+  right: -200%;
+  border-radius: var(--size-100);
+  background-color: var(--dark-grayish-blue);
+  padding-block: var(--size-150);
+  padding-inline: var(--size-400);
+  transform: translateX(-50%);
+}
+
+.social::after {
+  content: " ";
+  position: absolute;
+  top: 30%; 
+  left:100%;
+  margin-right: -20px;
+  border-width: 10px;
+  border-style: solid;
+  border-color:  transparent transparent transparent var(--dark-grayish-blue);
+}
+.share-icon:hover .social {
+  display: block;
+}
+
+@media screen and (min-width: 40em) {
+  .social {
+    bottom: 160%;
+    left: 50%;
+    transform: translateX(-50%);
   }
-  a:hover {
-    color: #747bff;
+  .social::after {
+    top: 100%; /* At the bottom of the tooltip */
+    left: 50%;
+    border-color: var(--dark-grayish-blue) transparent transparent transparent;
   }
-  button {
-    background-color: #f9f9f9;
+
+  .share-icon:hover .social {
+    display: block;
   }
+}
+
+.social ul {
+  color: var(--light-grayish-blue);
+  list-style: none;
+  display: flex;
+  gap: 20px;
+}
+
+.social ul li p {
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  font-size: 12px;
+  font-weight: lighter;
+  color: var(--dark-desaturated-blue);
+}
+
+.social ul li {
+  min-width: 20px;
 }
